# xontrib-django

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
xontrib/: django.py
